--- a/vignettes/dp-covariance.Rmd
+++ b/vignettes/dp-covariance.Rmd
@@ -22,7 +22,7 @@ knitr::opts_chunk$set(
 Differentially Private Covariance with `dpCovariance`
 -----------------------------------------
 
-The `dpCovariance` class evaluates a privacy-preserving covariance of a pair of vectors of values. The class supports any vector type that can be represented numerically, meaning that it can handle the R types `numeric` and `integer`.
+The `dpCovariance` class evaluates a privacy-preserving covariance of a series of vectors of values. The class supports any vector type that can be represented numerically, meaning that it can handle the R types `numeric` and `integer`.
 
 <!--
 Differential privacy is a rigorous mathematical framework for making statistical information about private datasets available. This is done in such a way that guarantees that information about specific individuals in the dataset does not leak out. Differentially private estimates of various statistics are available in this package.  For example, the `mean.release()` function releases a mean of a variable, while adding a precise about of noise to guarantee `epsilon` differential privacy. 
@@ -61,7 +61,9 @@ print(dpCovarianceExample$result)
 Arguments
 ---------
 
-In typical usage, there are two methods to the `dpCovariance` class: the `new` method and the `release` method. The `new` method creates an object of the class and accepts the following arguments:
+In typical usage, there are two methods to the `dpCovariance` class: the `new` method and the `release` method. The `new` method does not touch any data, it just creates an object that can calculate a differentially private covariance matrix. Only the `release` method touches data, and applies the functionality of the previously created object to the data.
+
+The `new` method creates an object of the class, and accepts the following arguments:
 
 * `mechanism` \ Character, the class name of the mechanism used to perturb the true estimate, must be `'mechanismLaplace'`.
 
@@ -89,32 +91,6 @@ The `release` method accepts a single argument.
 
 * `data` \ Data frame containing numeric columns corresponding the names specified in `columns`.
 
-Examples
-------
-
-Import the PSIlence library and attach the sample datasets:
-
-```{r, eval = TRUE}
-library(PSIlence)
-data(PUMS5extract10000)
-```
-
-&nbsp;
-
-To calculate a private variance of a numeric vector with `dpVariance`, enter the mechanism (this will be the Laplace Mechanism, or 'mechanismLaplace'), the variable type ('numeric'), the columns of interest (the column names of the variables of interest in the dataframe), the number of observations in the dataframe, the epsilon value (generally less than 1), and the matrix of ranges of the chosen columns:
-
-```{r}
-# before calculating the covariance, create a matrix of the column ranges
-income_range = c(0, 750000)
-education_range = c(1,16)
-column_ranges_matrix <- matrix(c(income_range, education_range), nrow=2, ncol=2, byrow=TRUE)
-
-numeric_covariance <- dpCovariance$new(mechanism='mechanismLaplace', varType='numeric', 
-                           columns=c('income', 'educ'), n=10000, epsilon=0.1, rng=column_ranges_matrix)
-numeric_covariance$release(PUMS5extract10000)
-print(numeric_covariance$result)
-```
-
 Values
 ------
 
@@ -129,6 +105,34 @@ The list in the `result` attribute has the following values.
 * `release` \ Differentially private estimate of the covariance matrix.
 * `variable` \ List of the variables in the covariance matrix (variables listed as strings)
 * `linearRegression` \ the function for the linear regression on the private estimate of the covariance matrix
+
+Examples
+------
+
+Import the PSIlence library and attach the sample datasets:
+
+```{r, eval = TRUE}
+library(PSIlence)
+data(PUMS5extract10000)
+```
+
+&nbsp;
+
+To calculate a private covariance matrix of a set of numeric vectors with `dpCovariance`, enter the mechanism (this will be the Laplace Mechanism, or 'mechanismLaplace'), the variable type ('numeric'), the columns of interest (the column names of the variables of interest in the dataframe), the number of observations in the dataframe, the epsilon value (generally less than 1), and the matrix of ranges of the chosen columns:
+
+```{r}
+# before calculating the covariance, create a matrix of the column ranges,
+# where each row contains the minimum and maximum value of a column,
+# in the order of the columns as they are passed into the dpCovariance call
+income_range = c(0, 750000)
+education_range = c(1,16)
+column_ranges_matrix <- matrix(c(income_range, education_range), nrow=2, ncol=2, byrow=TRUE)
+
+numeric_covariance <- dpCovariance$new(mechanism='mechanismLaplace', varType='numeric', 
+                           columns=c('income', 'educ'), n=10000, epsilon=0.1, rng=column_ranges_matrix)
+numeric_covariance$release(PUMS5extract10000)
+print(numeric_covariance$result)
+```
 
 Notes
 ------
