--- a/vignettes/dp-variance.Rmd
+++ b/vignettes/dp-variance.Rmd
@@ -29,8 +29,6 @@ Differential privacy is a rigorous mathematical framework for making statistical
 
 The privacy loss parameter `epsilon` is chosen by the user and represents the degree of privacy preservation guaranteed to each observation in the data when releasing information. Typically this is valued between 0 and 1; as the value gets smaller, the level of privacy protection grows. However, greater privacy protection means more noise must be added to the true mean to achieve the desired amount of privacy. Therefore, as epsilon grows smaller, the privacy protection becomes greater, but the accuracy of the statistical release becomes weaker.
 
-There is an additional definition of differential privacy known as `epsilon-delta` differential privacy. The additional privacy loss parameter `delta` is chosen by the user and represents how likely the privacy loss for a given dataset is more than epsilon. In other words, `delta` is the chance that additional privacy loss beyond `epsilon` occurs. This value should be very small, on the order of `2^-30`, and never greater than `1/n^2` (where n is the size of the database). Similar to `epsilon`, as the value of `delta` grows smaller, the level of privacy increases, but the accuracy decreases.
-
 The user must manually specify the number of observations, variable type, and range of the data of interest. 
 -->
 
@@ -62,7 +60,7 @@ print(dpVarianceExample2$result)
 Arguments
 ---------
 
-In typical usage, there are two methods to the `dpVariance` class: the `new` method and the `release` method. The `new` method creates an object of the class and accepts the following arguments:
+In typical usage, there are two methods to the `dpVariance` class: the `new` method and the `release` method. The `new` method does not touch any data, it just creates an object that can calculate a differentially private covariance matrix. Only the `release` method touches data, and applies the functionality of the previously created object to the data.
 
 * `mechanism` \ Character, the class name of the mechanism used to perturb the true estimate, must be `'mechanismLaplace'`.
 
@@ -87,6 +85,25 @@ In typical usage, there are two methods to the `dpVariance` class: the `new` met
 The `release` method calculates the mean of given data and accepts a single argument:
 
 * `data` \ Data frame containing numeric columns corresponding the name specified in `variable`.
+
+Values
+------
+
+The `release` method makes a call to the mechanism, which generates a list of statistical summaries available on the `result` field.
+
+* `result` List, contains the accuracy guarantee, privacy cost, and private release. Other elements reflecting variable post-processing of the release are also included.
+
+&nbsp; 
+
+The list in the `result` attribute has the following values.
+
+* `release` \ Differentially private estimate of the variance.
+* `variable` \ The variable n the data for which the differentially private variance was calculated.
+* `std` \ Differentially private estimate of the standard deviation of the variable (the square root of the variance estimate).
+* `accuracy` \ The accuracy guarantee of the release, given `epsilon`, if `epsilon` was entered. Otherwise, this is the accuracy value entered by the user.
+* `epsilon` \ The privacy cost required to guarantee `accuracy`, if `accuracy` was entered. Otherwise, this is the epsilon value entered by the user.
+
+&nbsp;
 
 Examples
 ------
@@ -123,25 +140,6 @@ logicalVariance <- dpVariance$new(mechanism='mechanismLaplace', varType='logical
 logicalVariance$release(PUMS5extract10000)
 print(logicalVariance$result)
 ```
-
-Values
-------
-
-The `release` method makes a call to the mechanism, which generates a list of statistical summaries available on the `result` field.
-
-* `result` List, contains the accuracy guarantee, privacy cost, and private release. Other elements reflecting variable post-processing of the release are also included.
-
-&nbsp; 
-
-The list in the `result` attribute has the following values.
-
-* `release` \ Differentially private estimate of the variance.
-* `variable` \ The variable n the data for which the differntially private variance was calculated.
-* `std` \ Differentially private estimate of the standard deviation of the variable (the square root of the variance estimate).
-* `epsilon` \ The privacy cost required to guarantee `accuracy`.
-* `accuracy` \ The accuracy guarantee of the release given `epsilon`.
-
-&nbsp;
 
 Notes
 ------
