--- a/vignettes/snapping-mechanism.Rmd
+++ b/vignettes/snapping-mechanism.Rmd
@@ -34,25 +34,11 @@ approximated in some way. We consider here the dominant means of doing so, the `
 There is a great deal of literature on how the behavior of floating-point numbers (and arithmetic on them) depart from operations on the real numbers,
 but [Mironov (2012)](http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.366.5957&rep=rep1&type=pdf) was the first to show that this had implications
 for the privacy guarantees of differentially private algorithms. Specifically, the paper demonstrated that standard implementations of the Laplace Mechanism
-did not satisfy the formal privacy guarantees because of error introduced by the floating-point implementation. We provude a high-level overview directly
-below, but the interested reader can consult the [Further Information on Vulnerability] section for a slightly more technical explanation.
+did not satisfy the formal privacy guarantees because of error introduced by the floating-point implementation. We provide a high-level overview
+below, but the interested reader can consult the original paper for an explanation of the mechanism, and [this document](https://github.com/ctcovington/floating_point/blob/master/snapping_mechanism/implementation/notes/snapping_implementation_notes.pdf) (which is currently a work-in-progress) for an explanation of the implementation.
 
-The Laplace Mechanism is theoretically an $$(\epsilon, 0)$$-DP algorithm, but can become an $$(\epsilon', \delta)$$-DP algorithm
-in practice (when implemented in software) where we know $$\epsilon' > \epsilon$$ and $$\delta > 0$$, but don't have exact guarantees on either.
-This undermines the tenets of differential privacy, as we can no longer accurately bound privacy loss. The Snapping Mechanism provides real
-$$(\epsilon, 0)$$-DP, but does so at the cost of (typically) adding more noise than the Laplace Mechanism would for the same
-nominal privacy guarantee.
-
-Setup
------
-In order to use the `Snapping Mechanism`, you will need to have [python3](https://www.python.org/downloads/) installed,
-as well as have all libraries included in the `snapping_requirements.txt` document,
-which is located in the top-level directory of the `PSIlence` library.
-Furthermore, you should download the [reticulate](https://rstudio.github.io/reticulate/) library,
-which will allow R to call python code (and thus the `Snapping Mechanism`).
-
-Further Information on Vulnerability
-------------------------------------
+Mechanism Explanation
+---------------------
 An algorithm, $A$ is $(\epsilon,0)$-differentially private if for all datasets $D_1, D_2$ that differ on a single element and for all $S \subseteq Im(A)$ (all subsets of possible output values):
 $$P[A(D_1) \in S] \leq e^{\epsilon} * P[A(D_2) \in S]$$
 $A$ is a randomized algorithm, so for a fixed input it produces a probability distribution over possible outputs.
@@ -65,6 +51,19 @@ Most uniform random number generators (which serve an important role in random n
 (not every possible floating-point number is represented), which are typically made even more porous by performing floating-point arithmetic
 on the value (which is necessary to produce Laplace, rather than uniform, noise). This porousness can lead to our mechanism producing
 values that are possible under only one of the data sets $D_1, D_2$, thus violating the $(\epsilon, 0)$ privacy guarantee.
+So, even though the Laplace Mechanism is theoretically an $$(\epsilon, 0)$$-DP algorithm, it can become an $$(\epsilon', \delta)$$-DP algorithm
+in practice (when implemented in software) where we know that $$\epsilon' > \epsilon$$ and $$\delta > 0$$, but don't have exact guarantees on either.
+This undermines the tenets of differential privacy, as we can no longer accurately bound privacy loss. The Snapping Mechanism provides real
+$$(\epsilon, 0)$$-DP, but does so at the cost of (typically) adding more noise than the Laplace Mechanism would for the same
+nominal privacy guarantee.
+
+Setup
+-----
+In order to use the `Snapping Mechanism`, you will need to have [python3](https://www.python.org/downloads/) installed,
+as well as have all libraries included in the `snapping_requirements.txt` document,
+which is located in the top-level directory of the `PSIlence` library.
+Furthermore, you should download the [reticulate](https://rstudio.github.io/reticulate/) library,
+which will allow R to call python code (and thus the `Snapping Mechanism`).
 
 Examples
 ------
