--- a/extra_docs/sensitivities/variance_sensitivity.tex
+++ b/extra_docs/sensitivities/variance_sensitivity.tex
@@ -95,7 +95,11 @@ $$\frac{n-1}{n} (M-m)^2.$$
 \end{theorem}
 
 \begin{proof}
-Consider database $\x$ with $n$ points and database $\xprime = \x \cup \{x_{n+1}\}.$ Note that
+Consider databases $\xprime$ and $\xprimeprime$ which differ in a single point. For notational ease, call $\x$ the part of $\xprime$ and $\xprimeprime$
+that is the same, and say that $\x$ contains $n$ points. WLOG say that the last data point in the database is the one that differs. I.e.,  
+$\xprime = \x \cup \{x_{n+1}\},$ and $\xprimeprime = \x \cup \{x'_{n+1}\}$. This proof assumes that a ``neighboring database" is one that differs in a single
+data-point, so we will ultimately be comparing $f(\xprime)$ and $f(\xprimeprime)$. However, it is useful to first write $f(\xprime)$ in terms of $f(\x)$.
+Note that
 
 \begin{align}
 \label{eqn:meanprime}
@@ -111,23 +115,22 @@ f(\xprime) &= \sum_{i=1}^n (x_i - \bar{x}')^2 + (x_{n+1} - \bar{x}')^2\\
 	&= f(\x) + n\left(\frac{x_{n+1}-\bar{x}}{n+1}\right)^2 + \left( \frac{nx_{n+1}-n\bar{x}}{n+1}\right)^2\\
 	&= f(\x) + (x_{n+1}-\bar{x})^2 \frac{n+n^2}{(n+1)^2}\\
 	&= f(\x) + (x_{n+1}-\bar{x})^2 \frac{n}{n+1}\\
-	&\le f(\x) + (M-m)^2 \frac{n}{n+1}
 \end{align*}
 
-Consider database $\xprimeprime$, which is the same size as $\xprime$ but with a single point changed. Note that
+Now, to bound the sensitivity of $f$, note that
 
-$$ \lvert f(\xprimeprime) - f(\xprime) \rvert \le f(x')-f(x),$$
+\begin{align*}
+\left\vert f(\xprime) - f(\xprimeprime) \right\vert &= \left\vert (x_{n+1}-\bar{x})^2 \frac{n}{n+1} - (x_{n+1}'-\bar{x})^2 \frac{n}{n+1} \right\vert\\
+	&\le (M-m)^2 \frac{n}{n+1}.
+\end{align*}
 
-so the sensitivity of $f$ is bounded by how much it changes from $\x$ to $\xprime$, and thus the sensitivity of $f$ is bounded by 
-$$ (M-m)^2 \frac{n}{n+1}.$$
+Now, usually we're interested in sensitivities in terms of the total number of values in the database, which here is $n+1$. So, redefining $n$ as $n+1$ in the above equation gives
 
-Since we'd really like to consider the sensitivity of database $\xprime$, redefine $n$ as $n+1$ to give a sensitivity bounded above by 
-
-$$ (M-m)^2 \frac{n-1}{n}$$
+$$ (M-m)^2 \frac{n-1}{n}.$$
 \end{proof}
 
 \begin{corollary}
-Variance has sensitivity bounded above by 
+Sample variance has sensitivity bounded above by 
 $$ \frac{(M-m)^2 }{n}.$$
 \end{corollary}
 \end{document}  
