added titles to sensitivities so you know who to blame for mistakes

--- a/extra_docs/sensitivities/covariance_sensitivity.tex
+++ b/extra_docs/sensitivities/covariance_sensitivity.tex
@@ -10,7 +10,12 @@
 
 \usepackage{macros}
 
+\title{Covariance Sensitivity Proof}
+\author{Ira Globus-Harris}
+
 \begin{document}
+
+\maketitle
 
 \begin{definition}
 Let $A$ and $B$ be two column vectors of length n. Then the sample covariance between $A$ and $B$, $\cov[A,B]$, is defined to be 
