--- a/extra_docs/sensitivities/variance_sensitivity.tex
+++ b/extra_docs/sensitivities/variance_sensitivity.tex
@@ -10,8 +10,12 @@
 
 \usepackage{macros}
 
+\title{Variance Sensitivity Proof}
+\author{Ira Globus-Harris}
 
 \begin{document}
+
+\maketitle
 
 \begin{definition}
 Let variance be defined as 
