--- a/extra_docs/sensitivities/mean_sensitivity.tex
+++ b/extra_docs/sensitivities/mean_sensitivity.tex
@@ -8,7 +8,12 @@
 \usepackage{amsmath, amsthm, amssymb}
 \usepackage{macros}
 
+\title{Mean Sensitivity Proof}
+\author{Ira Globus-Harris}
+
 \begin{document}
+
+\maketitle 
 
 \begin{definition}
 The sample mean of database $X$ of size $n$ is 
