--- a/vignettes/snapping-mechanism.Rmd
+++ b/vignettes/snapping-mechanism.Rmd
@@ -83,4 +83,10 @@ dp.mean2 <- dpMean$new(mechanism='mechanismSnapping', var.type='logical',
                        variable='sex', epsilon=0.1, n=nrow(PUMS5extract10000), rng=c(0, 1))
 dp.mean2$release(PUMS5extract10000)
 print(dp.mean2$result)
+
+# release variance on income
+dp.variance <- dpVariance$new(mechanism='mechanismSnapping', var.type='numeric',
+                      variable='income', epsilon=0.1, n=nrow(PUMS5extract10000), rng=c(0, 200000))
+dp.variance$release(PUMS5extract10000)
+print(dp.variance$result)
 ```
