--- a/vignettes/snapping-mechanism.Rmd
+++ b/vignettes/snapping-mechanism.Rmd
@@ -69,39 +69,33 @@ Examples
 --------
 
 ```{r, eval = TRUE}
-library(psilence)
+library(PSIlence)
 data(PUMS5extract10000)
 
 # release mean on income
-dp.mean <- dpMean$new(mechanism='mechanismSnapping', var.type='numeric',
+dp.mean <- dpMean$new(mechanism='mechanismSnapping', varType='numeric',
                       variable='income', epsilon=0.1, n=nrow(PUMS5extract10000), rng=c(0, 200000))
 dp.mean$release(PUMS5extract10000)
 print(dp.mean$result)
 
 # release mean on sex
-dp.mean2 <- dpMean$new(mechanism='mechanismSnapping', var.type='logical',
+dp.mean2 <- dpMean$new(mechanism='mechanismSnapping', varType='logical',
                        variable='sex', epsilon=0.1, n=nrow(PUMS5extract10000), rng=c(0, 1), gamma = 0.1)
 dp.mean2$release(PUMS5extract10000)
 print(dp.mean2$result)
 
-# release variance on income
-dp.variance <- dpVariance$new(mechanism='mechanismSnapping', var.type='numeric',
-                      variable='income', epsilon=0.1, n=nrow(PUMS5extract10000), rng=c(0, 200000))
+# release variance on age
+dp.variance <- dpVariance$new(mechanism = 'mechanismSnapping', varType='numeric', variable='age',
+                        n=nrow(PUMS5extract10000), epsilon=0.1, rng=c(0,100))
 dp.variance$release(PUMS5extract10000)
 print(dp.variance$result)
 
-# release covariance of income and sex
+# release covariance of sex and marriage
+# TODO: wait for Ira's additions and then test this
 ranges <- do.call(rbind, list(c(0,1), c(0,1)))
-dp.covariance <- dpCovariance$new(mechanism = 'mechanismSnapping', var.type = 'logical',
-                                 n = nrow(PUMS5extract10000), epsilon = 0.1,
+dp.covariance <- dpCovariance$new(mechanism = 'mechanismSnapping', varType = 'logical',
+                                 n = nrow(PUMS5extract10000), globalEps = 1,
                                  columns = c('sex', 'married'), rng = ranges)
 dp.covariance$release(PUMS5extract10000)
 print(dp.covariance$result)
-
-ranges <- do.call(rbind, list(c(0,1), c(0,1)))
-dp.covariance2 <- dpCovariance$new(mechanism = 'mechanismLaplace', var.type = 'logical',
-                                 n = nrow(PUMS5extract10000), epsilon = 0.1,
-                                 columns = c('sex', 'married'), rng = ranges)
-dp.covariance2$release(PUMS5extract10000)
-print(dp.covariance2$result)
 ```
