--- a/vignettes/snapping-mechanism.Rmd
+++ b/vignettes/snapping-mechanism.Rmd
@@ -84,6 +84,13 @@ dp.mean2 <- dpMean$new(mechanism='mechanismSnapping', varType='logical',
 dp.mean2$release(PUMS5extract10000)
 print(dp.mean2$result)
 
+# release histogram on income
+dp.histogram <- dpHistogram$new(mechanism = 'mechanismSnapping', varType = 'numeric',
+                                variable = 'income', n=nrow(PUMS5extract10000), epsilon=0.1,
+                                rng=c(0, 200000), nBins=10)
+dp.histogram$release(PUMS5extract10000)
+print(dp.histogram$result)
+
 # release variance on married status
 dp.variance <- dpVariance$new(mechanism = 'mechanismSnapping', varType='logical', variable='married',
                         n=nrow(PUMS5extract10000), epsilon=0.1, rng=c(0,1))
@@ -91,7 +98,6 @@ dp.variance$release(PUMS5extract10000)
 print(dp.variance$result)
 
 # release covariance of sex and marriage
-# TODO: wait for Ira's additions and then test this
 ranges <- do.call(rbind, list(c(0,1), c(0,1)))
 dp.covariance <- dpCovariance$new(mechanism = 'mechanismSnapping', varType = 'logical',
                                  n = nrow(PUMS5extract10000), globalEps = 1,
